added htmls for new pages added endpoints for different tables added Basic Auth handling

--- a/zaj3/templates/form2.html
+++ b/zaj3/templates/form2.html
@@ -5,7 +5,7 @@
     <title>Add teacher form</title>
 </head>
 <body>
-    <form method="post">
+    <form action = "http://127.0.0.1:443/add_teacher" method="post">
         <p><input type="text" id="teacherName" size="40" placeholder="Input teacher name"></p>
         <p><input type="text" id="teacherSubject" size="40" placeholder="Input teacher subject"></p>
         <input type="text" id="teacherTime" size="40" placeholder="Input teacher class time">
