added CRUD for all classes added login control

--- a/Zoo/zoo/templates/animals.html
+++ b/Zoo/zoo/templates/animals.html
@@ -4,16 +4,25 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="/static/styles.css">
         <title>List of animals in the zoo</title>
+        <script type = "text/javascript"
+             src = "{{ url_for('static', filename = 'script.js') }}" ></script>
     </head>
     <body>
-    <div>List of animals in the zoo</div>
+        {% if user==None: %}
+            <p align="right"> User not logged in </p>
+        {% else: %}
+            <p align="right"> Logged in as {{user}} </p>
+        {% endif %}
+        <div>List of animals in the zoo</div>
         <table border = 2>
             <tr>
                 <th>ID</th>
                 <th>NAME</th>
                 <th>SPECIES</th>
                 <th>ENCLOSURE</th>
-
+                {% if user!=None: %}
+                <th>ACTIONS</th>
+                {% endif %}
 
             </tr>
             {% for a in animals %}
@@ -22,9 +31,22 @@
                 <td>{{ a.name }}</td>
                 <td>{{ a.species }}</td>
                 <td>{{ a.enclosure }}</td>
+                {% if user!=None: %}
+                    <td>
+                        <input type = "button" onclick = "edit_animal({{ a.id }})" value = "Edit" />
+                        <input type = "button" onclick = "remove_animal({{ a.id }})" value = "Remove" />
+                    </td>
+                {% endif %}
             </tr>
             {% endfor %}
-
         </table>
+        {% if user!=None: %}
+            <p><input type="text" id="name" size="25" placeholder="Name">
+            <input type="text" id="species" size="25" placeholder="Species">
+            <input type="text" id="enclosure" size="25" placeholder="Enclosure">
+            <input type = "button" onclick = "add_animal()" value = "Add animal" /></p>
+        {% endif %}
+
+
     </body>
 </html>
